# NoFuncaJenny

./: CMakeLists.txt  run.sh
src/: main.cu
